
	- Fixed include in pgtypeslib to not include c.h

Fri May 16 13:32:10 CEST 2003

	- Made double variables work again.
	
Mon May 19 09:22:40 CEST 2003

	- Fixed exec sql ifdef command.

Tue May 20 11:47:00 CEST 2003

	- Reversed my fix for ifdef. It was the example, not ecpg which was
	  incorrect.
	- Changed DBPATH variable to PG_DBPATH.
	
Thu May 22 09:33:54 CEST 2003

	- ecpg now recognizes named struct/union usage.

Fri May 23 11:46:15 CEST 2003

	- Synced parser and keyword table.
	- ecpg now accepts array elements as input variables.

Tue May 27 13:29:28 CEST 2003

	- Fixed incorrect output for some structs.
	
Tue May 27 16:33:36 CEST 2003

	- Accept stdin/stdout as input/output file.
	
Thu May 29 13:58:25 CEST 2003

	- ecpg should now be able to parse forward struct definition.
	
Thu May 29 15:45:57 CEST 2003

	- Changed parsing of variables to be able to reference one attribute
	  of the n-th entry in an array of structs.
	  
Fri May 30 10:29:49 CEST 2003

	- Synced parser.
	- Added a dummy rule for EXEC SQL DESCRIBE that throws an error
	  message.
	  
Fri May 30 15:19:39 CEST 2003

	- Implemented prototype describe function.
	- Some minor cleanup/bug fixing.
	
Mon Jun  2 17:36:03 CEST 2003

	- Fixed segfault in forward definition parsing.
	
Tue Jun 10 19:43:49 CEST 2003

	- Fixed several small bugs.
	
Wed Jun 11 08:30:41 CEST 2003

	- Make sure a variable is no longer referenced when it is removed.
	- Fixed counting bug in parsing "->" operator.
	
Fri Jun 13 10:11:12 CEST 2003

	- Enable FETCH without INTO.
	- Compatibility functions for INFORMIX handling of DECLARE statement.

Sun Jun 15 11:18:58 CEST 2003

	- Applied multi-threading patch by Lee Kindess <lkindness@csl.co.uk>
	- Changed order of types in enum to make working with these easier.
	
Tue Jun 17 08:45:14 CEST 2003

	- Fixed several parsing bugs.
	- Set ecpg version to 3.0.0
	- Set ecpg library to 4.0.0
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0
